# cgal_examples

./: CMakeLists.txt
cmake/modules/: FindSphinx.cmake  cgalexCommon.cmake  cgalexMacros.cmake
data/: box.off  cube1.off  cube2.off  mesh13.off  mesh23.off  tet3.off
data/diff/: mesh21.off
data/union/: mesh115.off  mesh215.off
src/: CMakeLists.txt  cgalexConfig.cmake.in  cgalexConfigVersion.cmake.in
src/cmds/: CMakeLists.txt
src/cmds/bso_mesh/: CMakeLists.txt
src/cmds/bso_mesh/include/CGAL/: boolean_operations_3.h
src/cmds/cmp_meshes/: CMakeLists.txt  cmp_meshes.cpp  minimum_bounding_box.h  reflect_mesh.h
src/cmds/cpp/: CMakeLists.txt  constraining_containers.cpp  integral_concept.cpp  refinement.cpp
src/cmds/decompose_mesh/: CMakeLists.txt  decompose_mesh.cpp
src/cmds/repair_mesh/: Adder.h  Base_gaussian_map_builder.h  CMakeLists.txt  Extended_polyhedron_items.h  Face_normal_map.h  Gaussian_map_builder.h  Polyhedron_builder.h  Vertex_flag_map.h  arr_gaussian_map.h  build_gaussian_map.h  gaussian_map.h  gaussian_maps.h  make_x_monotone.h  minkowski_sum_3.h  repair_mesh.cpp
src/cmds/repair_meshes/: CMakeLists.txt  repair_meshes.cpp
src/cmds/show_mesh/: CMakeLists.txt  show_mesh.cpp
src/cmds/split_mesh/: CMakeLists.txt  split_mesh.cpp
src/cmds/test_arr/: CMakeLists.txt  arr.txt  test_arr.cpp
src/cmds/test_boost/: CMakeLists.txt  main.cpp
src/cmds/test_bso/: CMakeLists.txt  test_bso.cpp
src/cmds/test_bso/.qt/: QtDeploySupport.cmake
src/cmds/test_corefine/: CMakeLists.txt  boolean_operations_3.h  test_corefine.cpp
src/cmds/test_corefine/include/CGAL/: boolean_operations_3.h
src/cmds/test_corefine/include/CGAL/Polygon_mesh_processing/: autorefinement.h
src/cmds/test_intersection/: CMakeLists.txt  test_intersection.cpp
src/cmds/test_off/: CMakeLists.txt  load_off.hpp  merge_coplanar_faces.h  merge_coplanar_facets.h  test_off.cpp  triangulate_faces.h
src/cmds/test_off/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/cmds/test_qt6/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/cgalex/: CMakeLists.txt  cgalexConfig.cmake.in  cgalex_version.hpp.in
src/libs/cgalex/include/CGAL/: boolean_operations_3.h
src/libs/cgalex/include/cgalex/: Adder.h  Base_gaussian_map_builder.h  Face_normal_map.h  Gaussian_map_builder.h  Paths.h  Simple_gaussian_map_builder.h  Vertex_flag_map.h  arr_gaussian_map.h  build_gaussian_map.h  build_simple_gaussian_map.h  corefine_difference.h  corefine_intersection.h  corefine_union.h  find_file_fullname.h  find_square_width.h  gaussian_map.h  gaussian_map_sm.h  io_paths.h  make_x_monotone.h  match_faces.h  merge_coplanar_faces.h  print_faces.h  retriangulate_faces.h  soup_difference.h  soup_intersection.h  soup_union.h  square_distance.h  triangulate_faces.h
src/scripts/: cmpall.sh  cmpmeshes.py
