# Add subdirectories
# add_subdirectory(cpp)
# add_subdirectory(test_arr)
# add_subdirectory(test_boost)
# add_subdirectory(test_bso)
# add_subdirectory(test_intersection)
# add_subdirectory(test_qt6)

add_subdirectory(bso_mesh)
add_subdirectory(cmp_meshes)
add_subdirectory(decompose_mesh)
add_subdirectory(repair_mesh)
add_subdirectory(split_mesh)
add_subdirectory(show_mesh)
