cmake_minimum_required(VERSION 3.1...3.23)
project(test_bso LANGUAGES CXX)
find_package(Boost REQUIRED COMPONENTS program_options)
find_package(Qt6 QUIET COMPONENTS Widgets)
find_package(CGAL QUIET COMPONENTS Core OPTIONAL_COMPONENTS Qt6)
if (NOT CGAL_FOUND)
  message(FATAL_ERROR "This program requires the CGAL library, and will not be compiled.")
endif ()
if (NOT CGAL_Qt6_FOUND)
  message(FATAL_ERROR "This program requires the CGAL_Qt6 library, and will not be compiled.")
endif()
include_directories(include)
add_executable(test_bso test_bso.cpp)
target_link_libraries(test_bso PUBLIC CGAL::CGAL_Basic_viewer Boost::program_options)
